Prevent text being cut off in output area

--- a/css/main.css
+++ b/css/main.css
@@ -137,4 +137,5 @@ header
   background: #f7f7f7;
   height: 100%;
   overflow-y: scroll;
+  padding: 0 0.5em;
 }
